ctowasm/test/samples/error/struct_member_access_nonexistent_field.c
int main() {
  struct X {
    int x;
  } a;
  a.y; 
}